[gd_scene load_steps=17 format=3 uid="uid://bjfl3k74rt12j"]

[ext_resource type="Script" uid="uid://d6avlce3aptg" path="res://Scripts/ui.gd" id="1_7vnad"]
[ext_resource type="Texture2D" uid="uid://cpnv64ic0dg31" path="res://Assets/Temp Assets/temp_inv_ui.png" id="2_uifsc"]
[ext_resource type="PackedScene" uid="uid://bw6udjafo0v21" path="res://Scenes/slot.tscn" id="3_cptvh"]
[ext_resource type="Resource" uid="uid://bbjuon6vmyu0q" path="res://Assets/Items/Hotdog.tres" id="4_ryf15"]
[ext_resource type="Resource" uid="uid://bjwro3d7ty4gt" path="res://Assets/Items/Hamburger.tres" id="5_mmixe"]
[ext_resource type="Resource" uid="uid://beyath1m5t05m" path="res://Assets/Items/Cheese.tres" id="6_nt8jn"]
[ext_resource type="Resource" uid="uid://blqndpjiqs1kj" path="res://Assets/Items/Censor.tres" id="7_g0wmg"]
[ext_resource type="Resource" uid="uid://d24yn3eukxl5w" path="res://Assets/Items/Beer.tres" id="8_4vbiv"]
[ext_resource type="Texture2D" uid="uid://cia4aoj526b4k" path="res://Assets/Temp Assets/temp_gear.png" id="9_mmixe"]
[ext_resource type="Texture2D" uid="uid://cf66w2yy7tgsp" path="res://Assets/Temp Assets/temp_back.png" id="10_nt8jn"]
[ext_resource type="PackedScene" uid="uid://ebmjsddtditr" path="res://Scenes/volume_setting.tscn" id="11_g0wmg"]

[sub_resource type="Theme" id="Theme_m6e0p"]
RichTextLabel/font_sizes/normal_font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3r70p"]
bg_color = Color(0.572549, 0.501961, 0.843137, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nt8jn"]
bg_color = Color(0.664436, 0.536396, 0.786871, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g0wmg"]
bg_color = Color(0.664436, 0.536396, 0.786871, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vbiv"]
bg_color = Color(0.664436, 0.536396, 0.786871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="UI" type="Control" node_paths=PackedStringArray("description")]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.80955, 1.87483)
theme = SubResource("Theme_m6e0p")
script = ExtResource("1_7vnad")
description = NodePath("Inventory/Description")

[node name="Inventory" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.602
offset_top = -147.747
offset_right = 202.398
offset_bottom = 147.253
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uifsc")
region_rect = Rect2(-0.334099, 0.173913, 32.3455, 31.5904)
patch_margin_left = 4
patch_margin_top = 3
patch_margin_right = 4
patch_margin_bottom = 3

[node name="Use" type="Button" parent="Inventory"]
layout_mode = 0
offset_left = 78.0
offset_top = 126.0
offset_right = 136.0
offset_bottom = 157.0
theme_override_styles/normal = SubResource("StyleBoxFlat_3r70p")
text = "Use"

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -124.5
offset_right = -55.0
offset_bottom = 121.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Hotdog" parent="Inventory/VBoxContainer" instance=ExtResource("3_cptvh")]
layout_mode = 2
_item = ExtResource("4_ryf15")

[node name="Hamburger" parent="Inventory/VBoxContainer" instance=ExtResource("3_cptvh")]
layout_mode = 2
_item = ExtResource("5_mmixe")

[node name="Cheese" parent="Inventory/VBoxContainer" instance=ExtResource("3_cptvh")]
layout_mode = 2
_item = ExtResource("6_nt8jn")

[node name="Carnival" parent="Inventory/VBoxContainer" instance=ExtResource("3_cptvh")]
layout_mode = 2
_item = ExtResource("7_g0wmg")

[node name="Beer" parent="Inventory/VBoxContainer" instance=ExtResource("3_cptvh")]
layout_mode = 2
_item = ExtResource("8_4vbiv")

[node name="Description" type="NinePatchRect" parent="Inventory"]
layout_mode = 0
offset_left = 29.0
offset_top = 159.0
offset_right = 196.0
offset_bottom = 269.0
texture = ExtResource("2_uifsc")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Description" type="RichTextLabel" parent="Inventory/Description"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -50.0
offset_right = 77.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="Inventory/Description"]
layout_mode = 0
offset_left = 31.236
offset_top = -137.665
offset_right = 131.236
offset_bottom = -37.6647

[node name="SettingsButton" type="Button" parent="Inventory"]
layout_mode = 0
offset_left = 361.415
offset_top = 8.53437
offset_right = 392.415
offset_bottom = 37.5344
theme_override_colors/font_color = Color(0.984399, 0.991031, 0.986849, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_nt8jn")

[node name="Settings_BG" type="TextureRect" parent="Inventory/SettingsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_mmixe")

[node name="ReturnButton" type="Button" parent="Inventory"]
layout_mode = 0
offset_left = 362.521
offset_top = 255.49
offset_right = 391.521
offset_bottom = 285.49
theme_override_colors/font_color = Color(0.984399, 0.991031, 0.986849, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_g0wmg")

[node name="TextureRect" type="TextureRect" parent="Inventory/ReturnButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.65792
offset_top = -0.533389
offset_right = 1.34208
offset_bottom = 1.46661
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_nt8jn")

[node name="Settings" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.076
offset_top = -145.613
offset_right = 279.924
offset_bottom = 242.387
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)

[node name="BackButton" type="Button" parent="Settings"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.5
offset_top = -74.0
offset_right = 100.5
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.984399, 0.991031, 0.986849, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4vbiv")
text = "Back"

[node name="Volume_setting" parent="Settings" instance=ExtResource("11_g0wmg")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.5
offset_top = -29.0
offset_right = 0.5
offset_bottom = -29.0

[connection signal="pressed" from="Inventory/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Inventory/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="Settings/BackButton" to="." method="_on_back_button_pressed"]
